[tool.poetry]
name = "interactive-rag"
version = "0.1.0"
description = ""
authors = ["karaguppic <karaguppi.c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.9"
gradio = "^4.19.2"
openai = "^1.12.0"
chromadb = "^0.4.23"
tiktoken = "^0.6.0"
pypdf = "^4.0.2"
pymupdf = "^1.23.25"
langchain-openai = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
